fix resizing difficulties and shift activity feed over better inline

--- a/SASS/whatsnew.scss
+++ b/SASS/whatsnew.scss
@@ -95,6 +95,10 @@ body, .head, .logo, .nav {
   }
 }
 
+.nav {
+  background: none;
+}
+
 .post {
 	margin-top: 5px;
 }
